--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
         </script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZQ8u1LG80wz_cXkCXS-r0x1ojw9XHd0A&callback=initMap">
         </script>
-        <script src="js/addtohomescreen.js"></script>
-        <script>
+        <script src="js/addtohomescreen.js"></script>“
+       <script>
         addToHomescreen();
         </script>
         <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSyTnZYY7BFNiPES3bpzGIQFCmco3H61g&callback=initMap">
