--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
         <script src="./js/map.js"></script>
         <script src="js/panel_slide.js"></script>
         <script src="./js/fuelprice.js"></script>
+        <script src="./js/statefuel.js"></script>
        
 
         <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.0.min.js" type="text/javascript"></script> -->
